css/style.css
/* ... */
.optionLanguageEn:hover {
    background: #2e3035;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    color: white;
}


.bar {
    display: flex;
    flex-direction: column;
    justify-content: left;
    width: 120px;
    background: transparent;
    position: relative;
}

.playLine{
    background: transparent;
    width: 120px;
    height: 4px;
    transition: all 1s linear;
    display: flex;
    vertical-align: middle;
    cursor: pointer;
    justify-items: start;
    position: relative;
    margin-top: 5px;
    margin-bottom: 3px;
}

.pres {
    display: flex;
    width: 120px;
    height: 11px;
    justify-content: left;
    font-size: 10px;
    background: transparent;
    color: #f6d1d1;
    transition: all 1s linear;
}

.volume-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    width: 40%;
}

.volume {
    display: inline-block;
    width: 11px;
    height: 10px;
    background-size: cover;
    transition: all 1s linear;
    cursor: pointer;
}

.volume.visible{
    background-image: url('https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/img/sound-on.png');
}
.volume.off {
    background-image: url('https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/img/sound-off.png');
}

.volchange {
    display: inline-block;
    width: 35px;
    background: transparent;
    height: 4px;
    cursor: pointer;
    transition: all .2s ease-out;
}

.volume-container:hover .volchange {
    background: #f6d1d1;
}

.change {
    background: transparent;
    height: 100%;
    width: 75%;
    position: relative;
}

.volume-container:hover .change{
    background: #3d3535;
}

.playLine.visible {
    background: #f6d1d1;
}

.play-time {
    font-size: 10px;
    color: transparent;
    display: flex;
    vertical-align: middle;
    transition: all 1s linear;
    position: relative;
    bottom: 9px;
    height: 10px;
    left: 72px;
}

.play-time.visible{
    color: #f6d1d1;
}

.progress {
    display: block;
    outline: none;
    max-width: 100%;
    height: 4px;
    cursor: pointer;
    vertical-align: middle;
}

.progress.visible {
    background: #796767;
}

.play-list {
    list-style: none;
    margin-top: 5px;
}

.play__list__item {
    cursor: pointer;
    margin-bottom: 5px;
    vertical-align: middle;
    transition: all .7s linear;
}
.play__list__item.active {
    text-shadow: 0 0 10px white;
    color: #f6d1d1;
}

.play__list__item::before {
    display: inline-block;
    content: '';
    width: 12px;
    height: 12px;
    outline: none;
    border-radius: 50%;
    background-color: transparent;
    border: 1px solid white;
    margin-right: 10px;
    background-image: url("../assets/img/play-icon.png");
    background-size: cover;
    vertical-align: baseline;
    transition: all .7s linear;
}

.active::before{
    display: inline-block;
    content: '';
    width: 12px;
    height: 12px;
    outline: none;
    border-radius: 50%;
    background-color: #f6d1d1;
    border: 1px solid white;
    margin-right: 10px;
    background-image: url("../assets/img/pause-icon.png");
    background-size: cover;
    vertical-align: baseline;
    transition: all .7s linear;
}

.weather {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    row-gap: 5px;
    width: 180px;
    min-height: 180px;
    text-align: left;
}

.weather-error {
    margin-top: -10px;
}

.description-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: center;
    column-gap: 12px;
}

.weather-icon {
    font-size: 44px;
}

.city {
    width: 170px;
    height: 34px;
    padding: 5px;
    font-size: 20px;
    line-height: 24px;
    color: #fff;
    border: 0;
    outline: 0;
    border-bottom: 1px solid #fff;
    background-color: transparent;
}

.city::placeholder {
    font-size: 20px;
    color: #fff;
    opacity: .6;
}

.main {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 40vh;
    min-height: 260px;
    padding: 20px;
}

.slider-icon {
    position: absolute;
    top: 50%;
    margin-top: -16px;
    cursor: pointer;
}

.slide-prev {
    left: 20px;
    background-image: url("https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/svg/slider-prev.svg");
}

.slide-next {
    right: 20px;
    background-image: url("https://raw.githubusercontent.com/AlexBoronin/momentum/main/assets/svg/slider-next.svg");
}

.time {
    min-height: 124px;
    margin-bottom: 10px;
    font-family: 'Arial-MT', sans-serif;
    font-size: 150px;
    letter-spacing: -4px;
}

.date {
    min-height: 28px;
    font-size: 45px;
    margin-bottom: 20px;
}

.greeting-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: stretch;
    align-items: center;
    min-height: 48px;
    width: 100vw;
    font-size: 60px;
}

.greeting {
    flex: 1;
    padding: 10px;
    text-align: right;
}

.name {
    flex: 1;
    max-width: 50%;
    padding: 10px;
    font-size: 60px;
    text-align: left;
    color: #f8e0e0;
    background-color: transparent;
    border: 0;
    outline: 0;
}

.name-optic {
    animation: optic 3s ease-in-out infinite;
}

.name::placeholder {
    color: #e0c3c3;
    opacity: .7;
    font-size: 60px;
}

.name:hover {
    animation: none;
}


@keyframes optic {
    81% {
        opacity: .3;
    }
    85% {
        opacity: .7;
    }
    91% {
        opacity: 0;
    }
    94% {
        opacity: .6;
    }
    96% {
        opacity: 0;
    }
    97% {
        opacity: .2;
    }
    98% {
        opacity: .3;
    }
    99% {
        opacity: .4;
    }
}

.footer {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    width: 100%;
    height: 30vh;
    min-height: 160px;
    padding: 20px;
}
/* ... */

